--- a/react-fm/src/pages/matchQueues/eventsComponents/Players.module.scss
+++ b/react-fm/src/pages/matchQueues/eventsComponents/Players.module.scss
@@ -83,7 +83,7 @@
 
 .formationPlayerNames {
   color: #fff;
-  font-size: 11px;
+  font-size: 12px;
   font-weight: bold;
   margin-top: 1px;
 }
